Alterada a API. Agora os endpoints /balance, /debit, /credit e /status todos funcionam
